Добавлены runtime-изменения оружейного пресета
